--- a/src/main/resources/templates/tests.html
+++ b/src/main/resources/templates/tests.html
@@ -1,33 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://thymeleaf.org" lang="en">
 <h2>Owners</h2>
 
-<!--<table class="table table-striped">-->
-    <!--<thead>-->
-    <!--<tr>-->
-        <!--<th style="width: 150px;">Name</th>-->
-        <!--<th style="width: 200px;">Address</th>-->
-        <!--<th>City</th>-->
-        <!--<th>Telephone</th>-->
-        <!--<th style="width: 100px;">Pets</th>-->
-    <!--</tr>-->
-    <!--</thead>-->
-    <!--<tbody>-->
-    <!--<tr th:each="owner : ${selections}">-->
-        <!--<td>-->
-            <!--<a href="ownerDetails.html"-->
-               <!--th:href="@{|/owners/${owner.id}|}"-->
-               <!--th:text="|${owner.firstName} ${owner.lastName}|">Mary Smith</a>-->
-        <!--</td>-->
-        <!--<td th:text="${owner.address}">45, Oxford Street</td>-->
-        <!--<td th:text="${owner.city}">Cambridge</td>-->
-        <!--<td th:text="${owner.telephone}">555-555-555</td>-->
-        <!--<td>-->
-        <!--<span th:each="pet : ${owner.pets}" th:text="${pet.name}" th:remove="tag">-->
-          <!--Rob-->
-        <!--</span>-->
-        <!--</td>-->
-    <!--</tr>-->
-    <!--</tbody>-->
-<!--</table>-->
+<table class="table table-striped" th:action="">
+    <thead>
+    <tr>
+        <th style="width: 150px;">Id</th>
+        <th style="width: 200px;">Name</th>
+        <th>Date</th>
+        <th>Category</th>
+
+    </tr>
+    </thead>
+    <tbody>
+    <tr th:each="test : ${tests}">
+        <td>
+            <a
+               th:href="@{/tests}"
+               th:text="${test.id}">Mary Smith</a>
+        </td>
+        <td th:text="${test.name}">45, Oxford Street</td>
+        <td th:text="${test.date}">Cambridge</td>
+        <td th:text="${test.category_id}">555-555-555</td>
+        <td>
+        </td>
+    </tr>
+    </tbody>
+</table>
 </html>
