Commit for grace

--- a/src/main/resources/templates/Quiz.html
+++ b/src/main/resources/templates/Quiz.html
@@ -1,25 +1,25 @@
-<!DOCTYPE html>
-<html xmlns:th="http://thymeleaf.org" lang="en">
+<!--<!DOCTYPE html>-->
+<!--<html xmlns:th="http://thymeleaf.org" lang="en">-->
 
 
-<link rel="stylesheet" href="../static/css/quiz.css">
-<script src="../static/js/quiz-script.js"></script>
-<script src="../static/js/question.js"></script>
-<meta charset="UTF-8">
-		<title>Quiz</title>
+<!--<link rel="stylesheet" href="../static/css/quiz.css">-->
+<!--<script src="../static/js/quiz-script.js"></script>-->
+<!--<script src="../static/js/question.js"></script>-->
+<!--<meta charset="UTF-8">-->
+		<!--<title>Quiz</title>-->
 
-	<body>
-		<div id="quizContainer" class="container">
-			<div class="title">Quiz</div>
-			<div id="question" class="question"></div>
-			<label class="option"><input type="radio" name="option" value="A" > <span id="A"></span></label>
-			<label class="option"><input type="radio" name="option" value="B" > <span id="B"></span></label>
-			<label class="option"><input type="radio" name="option" value="C" > <span id="C"></span></label>
-			<label class="option"><input type="radio" name="option" value="D" > <span id="D"></span></label>
-			<button id="nextButton" class="next-btn" onclick="checkAnswer();">Next Question</button>
-		</div>
-		<div id="result" class="container result" style="display: none;">
-		</div>
+	<!--<body>-->
+		<!--<div id="quizContainer" class="container">-->
+			<!--<div class="title">Quiz</div>-->
+			<!--<div id="question" class="question"></div>-->
+			<!--<label class="option"><input type="radio" name="option" value="A" > <span id="A"></span></label>-->
+			<!--<label class="option"><input type="radio" name="option" value="B" > <span id="B"></span></label>-->
+			<!--<label class="option"><input type="radio" name="option" value="C" > <span id="C"></span></label>-->
+			<!--<label class="option"><input type="radio" name="option" value="D" > <span id="D"></span></label>-->
+			<!--<button id="nextButton" class="next-btn" onclick="checkAnswer();">Next Question</button>-->
+		<!--</div>-->
+		<!--<div id="result" class="container result" style="display: none;">-->
+		<!--</div>-->
 
-	</body>
-</html>
+	<!--</body>-->
+<!--</html>-->
