--- a/src/main/resources/templates/questions.html
+++ b/src/main/resources/templates/questions.html
@@ -1,14 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://thymeleaf.org" lang="en">
 
-<head>
-    <link rel="stylesheet" href="../static/css/questions.css" th:ref="@{css/questions.css}">
-    <style>
-        #leftnav{
-         background: #2aabd2;
-        }
-    </style>
-</head>
+    <!--<link rel="stylesheet" href="../static/css/questions.css" th:ref="@{css/questions.css}">-->
 
 <h2>Questions</h2>
 <div id="leftnav">
