Changed buttons, was able to pull id from button in javascript, issue with the get request.

--- a/src/main/resources/static/css/questions.css
+++ b/src/main/resources/static/css/questions.css
@@ -1,8 +1,26 @@
 .leftnav{
-   background-color: lightblue;
     height: 100vh;
+    float:left;
     overflow: auto;
     width: 200px;
-
 }
-
+.main{
+    position: relative;
+    background-color: red;
+    height: 100vh;
+    overflow: auto;
+    width: 500px;
+}
+button
+{background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    padding: 14px 40px;
+    width: 95%;
+    margin: 5px;
+}
