--- a/src/main/resources/static/css/questions.css
+++ b/src/main/resources/static/css/questions.css
@@ -2,17 +2,19 @@
     height: 100vh;
     float:left;
     overflow: auto;
-    width: 200px;
+    width: 20%;
+    background-color: white;
 }
 .main{
     position: relative;
-    background-color: red;
+    background-color: #e6e6e6;
     height: 100vh;
     overflow: auto;
-    width: 500px;
+    width: 80%;
 }
 button
-{background-color: #4CAF50; /* Green */
+{
+    background-color: #cccccc; /* Green */
     border: none;
     color: white;
     padding: 15px 32px;
@@ -20,7 +22,10 @@ button
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
-    padding: 14px 40px;
-    width: 95%;
+    width: 100%;
     margin: 5px;
+    border: 1px solid black;
+}
+button:hover{
+    background-color: #4cae4c;
 }
