--- a/src/main/resources/static/css/questions.css
+++ b/src/main/resources/static/css/questions.css
@@ -2,7 +2,7 @@
     height: 100vh;
     float:left;
     overflow: auto;
-    width: 20%;
+    width: 15%;
     background-color: white;
 }
 .main{
@@ -10,7 +10,7 @@
     background-color: #e6e6e6;
     height: 100vh;
     overflow: auto;
-    width: 80%;
+    width: 85%;
 }
 button
 {
@@ -27,5 +27,5 @@ button
     border: 1px solid black;
 }
 button:hover{
-    background-color: #4cae4c;
+    background-color: #2e6da4;
 }
