--- a/src/main/resources/static/css/questions.css
+++ b/src/main/resources/static/css/questions.css
@@ -1,16 +1,31 @@
 .leftnav{
-   background-color: lightblue;
     height: 100vh;
     float:left;
     overflow: auto;
-    width: 200px;
+    width: 15%;
+    background-color: white;
 }
 .main{
-   position: relative;
-   background-color: red;
+    position: relative;
+    background-color: #e6e6e6;
     height: 100vh;
     overflow: auto;
-    width: 500px;
+    width: 85%;
 }
-
-
+button
+{
+    background-color: #cccccc; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    width: 100%;
+    margin: 5px;
+    border: 1px solid black;
+}
+button:hover{
+    background-color: #2e6da4;
+}
