--- a/src/main/resources/templates/questions.html
+++ b/src/main/resources/templates/questions.html
@@ -3,25 +3,52 @@
 
 <head>
     <link rel="stylesheet" href="../static/css/questions.css" th:ref="@{/static/css/questions.css}" type="text/css" media="screen"/>
-    <script>
-		function show() {
-		  
-		}
-		document.getElementById("target2").innerHTML = show();
-	</script>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"/>
+
 </head>
-<h2>Questions</h2>
 
+<!--Nav Bar-->
+<nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">Team Gigabyte</a>
+        </div>
+        <div id="navbar" class="collapse navbar-collapse">
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="#">Home</a></li>
+                <li><a href="#about">My Profile</a></li>
+            </ul>
+        </div>
+        <!--/.nav-collapse -->
+    </div>
+</nav>
 <div class="leftnav" id="target1">
-<table class="table table-striped">
-    <tbody>
-    <tr th:each="question : ${questionList}">
-    	<button onclick="show();" th:text="${question.toString()}"></button>
-    </tr>
-    </tbody>
-</table>
+    <table class="table table-striped">
+        <tbody>
+        <tr th:each="question : ${questionList}">
+            <button th:onclick="'getPropId(\'' + ${question.id} + '\');'" th:text="Question + ${question.id}"></button>
+        </tr>
+        </tbody>
+    </table>
 </div>
+<div class="middle">
+</div>
+<script type="text/javascript">
 
+    function getPropId(inputID)
+    {   alert(inputID);
+//        $.get("http://localhost:8080/questions/"+inputID, function(data, textStatus)
+//        {
+//            alert("Done, with the following status: " + textStatus + ". Here is the response: " + data); Issue with this script
+//        });
+    };
+</script>
 <div class="main" id="target2">
 </div>
 
