--- a/src/main/resources/templates/questions.html
+++ b/src/main/resources/templates/questions.html
@@ -4,6 +4,22 @@
 <head>
     <link rel="stylesheet" href="../static/css/questions.css" th:ref="@{/static/css/questions.css}" type="text/css" media="screen"/>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"/>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+    <script type="text/javascript">
+        function getPropId(inputID) {
+            alert("localhost:8080/questions/"+inputID);
+//            $.ajax({
+//                type: "GET",
+//                url:"localhost:8080/questions/"+inputID,
+//                success: function(data){
+//                    alert(data);
+//                }
+//            });
+            $.get("http://localhost:8080/questions/" + inputID, function (data, status) {
+                alert("Data: " + data.toString() + "\nStatus: " + status);
+            });
+        };
+    </script>
 
 </head>
 
@@ -39,19 +55,6 @@
 </div>
 <div class="middle">
 </div>
-<script type="text/javascript">
-
-    function getPropId(inputID)
-    {   alert(inputID);
-        $.ajax({
-        type: "GET",
-            url:"localhost:8080/questions/"+inputID,
-        success: function(data){
-        alert(data);
-    }
-    });
-    };
-</script>
 <div class="main" id="target2">
 </div>
 
