--- a/src/main/resources/templates/tests.html
+++ b/src/main/resources/templates/tests.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html xmlns:th="http://thymeleaf.org" lang="en">
 
-
+<head>
+    <!--<meta name="_csrf" th:content="${_csrf.token}"/>-->
+    <!--&lt;!&ndash; default header name is X-CSRF-TOKEN &ndash;&gt;-->
+    <!--<meta name="_csrf_header" th:content="${_csrf.headerName}"/>-->
+</head>
 
 <h2>Tests</h2>
 
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"/>
-
+<!--<script>-->
+    <!--document.onload = alert('meta[name="_csrf"]');-->
+<!--</script>-->
 <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
         <div class="navbar-header">
