--- a/src/main/resources/templates/tests.html
+++ b/src/main/resources/templates/tests.html
@@ -26,7 +26,7 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Home</a></li>
+                <li class="active"><a href="/tests/" th:href="@{/tests/}">Home</a></li>
                 <li><a href="#about">My Profile</a></li>
             </ul>
         </div>
