--- a/src/main/resources/templates/questions.html
+++ b/src/main/resources/templates/questions.html
@@ -9,21 +9,34 @@
     <!--<meta name="_csrf_header" th:content="${_csrf.headerName}"/>-->
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
     <script type="text/javascript">
+        var testattemptID = 0;
         function getPropId(inputID) {
             alert("localhost:8080/questions/"+inputID);
-//            $.ajax({
-//                type: "GET",
-//                url:"localhost:8080/questions/"+inputID,
-//                success: function(data){
-//                    alert(data);
-//                }
-//            });
             $.get("http://localhost:8080/questions/" + inputID, function (data, status) {
                 alert("Data: " + data.toString() + "\nStatus: " + status);
             });
         };
-    </script>
 
+        $(document).ready(function () {
+            var pathArray = window.location.pathname.split('/');
+            var secondLevelLocation = pathArray[2];
+            alert(secondLevelLocation);
+            $.ajax({
+                type: "POST",
+                url: "http://localhost:8080/api/testattempt/" + secondLevelLocation,
+                dataType: 'json',
+                success: function (data, textStatus, jqXHR) {
+                    alert(data);
+                },
+                error: function (jqXHR, textStatus, errorThrown) {
+
+                }
+            });
+        }); //issue, need to pass test id with post call
+    </script>
+    <script type="text/javascript">
+
+    </script>
 </head>
 
 <!--Nav Bar-->
@@ -58,7 +71,6 @@
 </div>
 <div class="middle">
 </div>
-<div class="main" id="target2">
-</div>
+
 
 </html>
