Got json object to print in main in html

--- a/src/main/resources/static/css/questions.css
+++ b/src/main/resources/static/css/questions.css
@@ -6,7 +6,8 @@
     background-color: white;
 }
 
-#textArea {
+.main {
+    padding-top: 50px;
     position: relative;
     background-color: #e6e6e6;
     height: 100vh;
