--- a/src/main/resources/templates/teachtestdash.html
+++ b/src/main/resources/templates/teachtestdash.html
@@ -17,7 +17,6 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js"
             integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn"
             crossorigin="anonymous"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 </head>
 
 <h2>Tests</h2>
@@ -80,14 +79,13 @@
 
 <!-- Trigger/Open The Modal -->
 <button id="myBtn">Open Modal</button>
-
 <!-- The Modal -->
 <div id="myModal" class="modal">
-
     <!-- Modal content -->
     <div class="modal-content">
         <span class="close">&times;</span>
-        <p>Here is where ajax call to create test will go</p>
+        <input type="text" id="testText" name="testText"/>
+        <input type="date" id="testDate" name="testDate"/>
     </div>
 
 </div>
