--- a/src/main/resources/templates/teachtestdash.html
+++ b/src/main/resources/templates/teachtestdash.html
@@ -65,7 +65,6 @@
     <tr th:each="test : ${testsAll}">
         <td th:text="${test.id}">1</td>
         <td th:text="${test.name}">Title ...</td>
-        <td th:text="${test.date}">Text ...</td>
         <td th:text="${test.getCategory()}"></td>
         <td>
             <button type="button" class="btn btn-warning">Modify</button>
@@ -84,10 +83,18 @@
     <!-- Modal content -->
     <div class="modal-content">
         <span class="close">&times;</span>
-        <input type="text" id="testText" name="testText"/>
-        <input type="date" id="testDate" name="testDate"/>
+        <div class="name">
+            <label for="testName" th:text="Name"/>
+            <input type="text" id="testName" name="testName"/>
+        </div>
+        <div class="category">
+            <label for="testCategory" th:text="Category"/>
+            <input type="text" id="testCategory" name="testCategory"/>
+        </div>
+        <div class="testBtn" name="testBtn">
+            <button type="button" class="btn btn-success">Add Test</button>
+        </div>
     </div>
-
 </div>
 
 
