--- a/src/main/resources/templates/questions.html
+++ b/src/main/resources/templates/questions.html
@@ -52,7 +52,7 @@
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 <li class="active"><a href="/tests/" th:href="@{/tests/}">Home</a></li>
-                <li><a href="#about">My Profile</a></li>
+                 <li class="active"><a href="/profile/" th:href="@{/profile/}">My Profile</a></li>
             </ul>
         </div>
         <!--/.nav-collapse -->
@@ -69,6 +69,7 @@
 </div>
 
 <div class="main" id="mainDisplay">
+
 
 </div>
 
