--- a/src/main/resources/templates/tests.html
+++ b/src/main/resources/templates/tests.html
@@ -27,7 +27,7 @@
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 <li class="active"><a href="/tests/" th:href="@{/tests/}">Home</a></li>
-                <li><a href="#about">My Profile</a></li>
+                <li class="active"><a href="/profile/" th:href="@{/profile/}">My Profile</a></li>
             </ul>
         </div>
         <!--/.nav-collapse -->
@@ -54,6 +54,8 @@
     </tr>
     </tbody>
 </table>
+
+
 
 
 
