--- a/src/main/resources/templates/questions.html
+++ b/src/main/resources/templates/questions.html
@@ -2,28 +2,148 @@
 <html xmlns:th="http://thymeleaf.org" lang="en">
 
 <head>
-    <link rel="stylesheet" href="../static/css/questions.css" th:ref="@{/static/css/questions.css}" type="text/css" media="screen"/>
+    <link rel="stylesheet" href="../css/questions.css" th:ref="@{/css/questions.css}" type="text/css" media="screen"/>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"/>
     <!--<meta name="_csrf" th:content="${_csrf.token}"/>-->
     <!--&lt;!&ndash; default header name is X-CSRF-TOKEN &ndash;&gt;-->
     <!--<meta name="_csrf_header" th:content="${_csrf.headerName}"/>-->
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
     <script type="text/javascript">
-        function getPropId(inputID) {
-            alert("localhost:8080/questions/"+inputID);
-//            $.ajax({
-//                type: "GET",
-//                url:"localhost:8080/questions/"+inputID,
-//                success: function(data){
-//                    alert(data);
-//                }
-//            });
-            $.get("http://localhost:8080/questions/" + inputID, function (data, status) {
-                alert("Data: " + data.toString() + "\nStatus: " + status);
-            });
-        };
-    </script>
+        var testattemptID = 0;
+        var correctAns = 0;
+        var answerSubmit = 0;
+        
+function getPropId(inputID) {
+    // alert("localhost:8080/questions/" + inputID);
+    
 
+	$.get("http://localhost:8080/questions/" + inputID, function (data, status) {
+    //alert(JSON.stringify(data));
+    document.getElementById("target2").innerHTML = JSON.stringify(data); // doesn't work
+    document.getElementById("main").innerHTML = "What's the sum of the following two numbers?"
+    
+    document.getElementById("target1").innerHTML = "";
+    document.getElementById("target2").innerHTML = "";
+    
+    var v1 =  data.var1;
+    var v2 =  data.var2;
+    var btn1 = document.createElement("BUTTON");
+    var btn2 = document.createElement("BUTTON");   
+    btn1.innerHTML = v1;
+    btn2.innerHTML = v2;
+    $(btn1).addClass('numbut');
+    $(btn2).addClass('numbut');
+	target1.appendChild(btn1);
+	target2.appendChild(btn2);
+	p.innerHTML = "+";
+								    $(btn1).one("click", function add1() { 
+									  for(var i = 0; i != v1; i++) {
+										  var img = new Image();
+										  img.src = "http://vignette3.wikia.nocookie.net/lego/images/1/11/Watermelon_Cartoon.png/revision/latest?cb=20120819040222";
+										  img.setAttribute("width", "66");
+										  img.setAttribute("height", "55");
+										  
+									  target1.appendChild(img);
+									  }
+							
+									}
+									);
+									$(btn2).one("click", function add2() { 
+									  for(var i = 0; i != v2; i++) {
+										  var img = new Image();
+										  img.src = "http://vignette3.wikia.nocookie.net/lego/images/1/11/Watermelon_Cartoon.png/revision/latest?cb=20120819040222";
+										  img.setAttribute("width", "66");
+										  img.setAttribute("height", "55");
+										  
+									  target2.appendChild(img);
+									  }
+							
+									}
+									);	
+    document.getElementById("answer").innerHTML = "How many total watermelons do you have?";
+
+	var input = document.createElement('input'); 
+	answer.appendChild(input);
+	
+	var submit = document.createElement("BUTTON");
+	submit.innerHTML = "submit";
+	$(submit).addClass('submit');
+	answer.appendChild(submit);
+
+		$.ajax({
+	                type: "GET",
+	                url: "http://localhost:8080/api/correctAnswer/" + inputID,
+	                dataType: 'json',
+		                success: function (data, textStatus, jqXHR) {
+		                 
+		                   correctAns = data.correct_answer;
+		                   alert(data.correct_answer); //can use to see testattemptID to see if it works
+		                },
+		                error: function (jqXHR, textStatus, errorThrown) {
+		                    //alert(textStatus);
+		                    //alert(errorThrown);
+		                }
+	            	});
+	
+				        $(submit).click(function compare() {
+							answerSubmit = input.value;
+							alert(answerSubmit);
+
+				            $.ajax(
+				            {	type: "POST",
+						                url: "http://localhost:8080/api/answerattempt/",
+						                data : {answer : answerSubmit,
+						                       testAttemptId : testattemptID,
+						                       questionId : inputID},
+						                dataType: 'json',
+						                success: function () {
+						                	alert(correctAns);
+						                    //testattemptID = data.id;
+						                   	//alert(testattemptID); can use to see testattemptID to see if it works
+						                },
+						                error: function () {
+						                    //alert(textStatus);
+						                    //alert(errorThrown);
+						                }
+			            	}
+			            	
+			            	);
+			            	
+			            	if(correctAns == answerSubmit)
+			            	{
+			            	alert("Success!");
+			            	}
+        				});
+	
+
+    });//$.get
+};
+
+
+
+        $(document).ready(function () {
+            var pathArray = window.location.pathname.split('/');
+            var secondLevelLocation = pathArray[2];
+            alert(secondLevelLocation);
+            $.ajax({
+                type: "POST",
+                url: "http://localhost:8080/api/testattempt/" + secondLevelLocation,
+                dataType: 'json',
+                success: function (data, textStatus, jqXHR) {
+                    testattemptID = data.id;
+                   	//alert(testattemptID); can use to see testattemptID to see if it works
+                },
+                error: function (jqXHR, textStatus, errorThrown) {
+                    alert(textStatus);
+                    alert(errorThrown);
+                }
+            });
+            
+        });
+    </script>
+    <script type="text/javascript">
+
+    </script>
 </head>
 
 <!--Nav Bar-->
@@ -47,18 +167,28 @@
         <!--/.nav-collapse -->
     </div>
 </nav>
-<div class="leftnav" id="target1">
+<div class="leftnav" id="target">
     <table class="table table-striped">
         <tbody>
         <tr th:each="question : ${questionList}">
-            <button th:onclick="'getPropId(\'' + ${question.id} + '\');'" th:text="Question + ${question.id}"></button>
+            <button class= "button" th:onclick="'getPropId(\'' + ${question.id} + '\');'" th:text="Question + ${question.id}"></button>
         </tr>
         </tbody>
     </table>
 </div>
-<div class="middle">
+
+<div class="main" id="main">
+
 </div>
-<div class="main" id="target2">
+
+
+	<div class="sec1" id="target1">
+	</div>
+	<div class="p" id="p">
+	</div>
+	<div class="sec2" id="target2">
+	</div>
+<div class="answer" id="answer">
 </div>
 
 </html>
