--- a/src/main/resources/templates/questions.html
+++ b/src/main/resources/templates/questions.html
@@ -70,20 +70,19 @@ function getPropId(inputID) {
 	$(submit).addClass('submit');
 	answer.appendChild(submit);
 
-		$.ajax({
+	correctAns = $.ajax({
 	                type: "GET",
 	                url: "http://localhost:8080/api/correctAnswer/" + inputID,
 	                dataType: 'json',
 		                success: function (data, textStatus, jqXHR) {
-		                 
-		                   correctAns = data.correct_answer;
-		                   alert(data.correct_answer); //can use to see testattemptID to see if it works
+		                   //alert(data.correctanswer); //can use to see testattemptID to see if it works
 		                },
 		                error: function (jqXHR, textStatus, errorThrown) {
 		                    //alert(textStatus);
 		                    //alert(errorThrown);
 		                }
 	            	});
+	            	//correctAns = correctAns.getCorrectAnswer();
 	
 				        $(submit).click(function compare() {
 							answerSubmit = input.value;
@@ -97,7 +96,7 @@ function getPropId(inputID) {
 						                       questionId : inputID},
 						                dataType: 'json',
 						                success: function () {
-						                	alert(correctAns);
+						                	alert(correctAns.getCorrectAnswer());
 						                    //testattemptID = data.id;
 						                   	//alert(testattemptID); can use to see testattemptID to see if it works
 						                },
