--- a/src/main/resources/templates/teachtestdash.html
+++ b/src/main/resources/templates/teachtestdash.html
@@ -2,22 +2,16 @@
 <html xmlns:th="http://thymeleaf.org" lang="en">
 
 <head>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
     <!--<meta name="_csrf" th:content="${_csrf.token}"/>-->
     <!--&lt;!&ndash; default header name is X-CSRF-TOKEN &ndash;&gt;-->
     <!--<meta name="_csrf_header" th:content="${_csrf.headerName}"/>-->
     <link rel="stylesheet" href="../static/css/teachtestdash.css"/>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"/>
-    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"
-            integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n"
-            crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"
-            integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb"
-            crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js"
-            integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn"
-            crossorigin="anonymous"></script>
-    <script src="../static/js/teachtestdash.js"></script>
 </head>
 
 <h2>Tests</h2>
@@ -79,43 +73,89 @@
     </tr>
     </tbody>
 </table>
+<!-- Trigger the modal with a button -->
+<script type="text/javascript">
+    function addTest() {
+        $.ajax({
+            type: "Post",
+            url: "",
+            dataType: 'json',
+            success: function () {
+                $("#modal-content").addClass("alert alert-success");
+            },
+            error: function (jqXHR, textStatus, errorThrown) {
+                alert(textStatus);
+                alert(errorThrown);
+            }
+        });
 
+    }
+</script>
+
+<!-- Modal -->
+<div id="myModal" class="modal fade" role="dialog">
+    <div class="modal-dialog">
+
+        <!-- Modal content-->
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Modal Header</h4>
+            </div>
+            <div class="modal-body">
+                <div class="name">
+                    <label for="testName" th:text="Name"/>
+                    <input type="text" id="testName" name="testName"/>
+                </div>
+                <div class="category">
+                    <label for="testCategory" th:text="Category"/>
+                    <input type="text" id="testCategory" name="testCategory"/>
+                </div>
+                <div class="testBtn" name="testBtn">
+                    <button type="button" class="btn btn-success" th:onclick="addTest();">Add Test</button>
+                </div>
+            </div>
+            <div class="modal-footer">
+            </div>
+        </div>
+
+    </div>
+</div>
 <!-- The Modal -->
-<div id="myModal" class="modal">
-    <!-- Modal content -->
-    <div class="modal-content">
-        <span class="close">&times;</span>
-        <div class="name">
-            <label for="testName" th:text="Name"/>
-            <input type="text" id="testName" name="testName"/>
-        </div>
-        <div class="category">
-            <label for="testCategory" th:text="Category"/>
-            <input type="text" id="testCategory" name="testCategory"/>
-        </div>
-        <div class="testBtn" name="testBtn">
-            <button type="button" class="btn btn-success">Add Test</button>
-        </div>
-    </div>
-</div>
-
-<div id="myModal2" class="modal">
-    <!-- Modal content -->
-    <div class="modal-content">
-        <span class="close">&times;</span>
-        <table class="table table-striped" id="modalQuestionTable">
-            <thead>
-            <tr>
-                <th style="width: 150px;">Id</th>
-                <th style="width: 200px;">Name</th>
-                <th>Category</th>
-                <th>Modify Questions</th>
-                <th>Delete</th>
-            </tr>
-            </thead>
-            <tbody>
-            </tbody>
-        </table>
-    </div>
-</div>
+<!--<div id="myModal" class="modal">-->
+<!--&lt;!&ndash; Modal content &ndash;&gt;-->
+<!--<div class="modal-content">-->
+<!--<span class="close">&times;</span>-->
+<!--<div class="name">-->
+<!--<label for="testName" th:text="Name"/>-->
+<!--<input type="text" id="testName" name="testName"/>-->
+<!--</div>-->
+<!--<div class="category">-->
+<!--<label for="testCategory" th:text="Category"/>-->
+<!--<input type="text" id="testCategory" name="testCategory"/>-->
+<!--</div>-->
+<!--<div class="testBtn" name="testBtn">-->
+<!--<button type="button" class="btn btn-success">Add Test</button>-->
+<!--</div>-->
+<!--</div>-->
+<!--</div>-->
+<!--<div id="myModal2" class="modal">-->
+<!--&lt;!&ndash; Modal content &ndash;&gt;-->
+<!--<div class="modal-content">-->
+<!--<span class="close2">&times;</span>-->
+<!--<table class="table table-striped" id="modalQuestionTable">-->
+<!--<thead>-->
+<!--<tr>-->
+<!--<th style="width: 150px;">Id</th>-->
+<!--<th style="width: 200px;">Name</th>-->
+<!--<th>Category</th>-->
+<!--<th>Modify Questions</th>-->
+<!--<th>Delete</th>-->
+<!--</tr>-->
+<!--</thead>-->
+<!--<tbody>-->
+<!--</tbody>-->
+<!--</table>-->
+<!--</div>-->
+<!--</div>-->
 </html>
